--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   google_fonts: ^6.1.0
   ant_icons: ^2.0.0-nullsafety.0
   cached_network_image: ^3.3.0
+  animate_do: ^3.1.2
 
 dev_dependencies:
   flutter_test:
@@ -69,6 +70,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/json/
   
 
   # An image asset can refer to one or more resolution-specific "variants", see
