--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   ant_icons: ^2.0.0-nullsafety.0
   cached_network_image: ^3.3.0
   animate_do: ^3.1.2
+  font_awesome_flutter: ^10.5.0
+  flutter_staggered_grid_view: ^0.7.0
 
 dev_dependencies:
   flutter_test:
