--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   animate_do: ^3.1.2
   font_awesome_flutter: ^10.5.0
   flutter_staggered_grid_view: ^0.7.0
+  flutter_rating_bar: ^4.0.1
 
 dev_dependencies:
   flutter_test:
