--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,9 @@ dependencies:
   font_awesome_flutter: ^10.5.0
   flutter_staggered_grid_view: ^0.7.0
   flutter_rating_bar: ^4.0.1
+  hive_flutter: ^1.1.0
+  hive: ^2.2.3
+  flutter_slidable: ^3.0.0
 
 dev_dependencies:
   flutter_test:
